# Analysing-Sentiments-and-Topics-of-Amazon-Product-Reviews

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  hello.csv  pyproject.toml  test.joblib  test2.joblib
.ipynb_checkpoints/: pyproject-checkpoint.toml
artifacts/amz-sent-analysis_datasets:v1/: train.csv
cli/: main.py
data/data_preparation_scripts/: dataset_prep.py
data/processed_hf/: test.csv  validation.csv
data/processed_ml/: test.csv  train.csv  validation.csv
data/processed_ml_embeds/: validation.json
models/sent_clf/: albert_hf.py  bert_tf.py  hf_clf.py  hf_clf_cli.py  lstm_torch.py  multinom_nb.py  rf.py  trans_hf.py
models/sent_clf_lib/fasttext/: ft_embeds.py
models/sent_clf_lib/huggingface/: hf_clf.py
models/sent_clf_lib/sklearn/: rf_clf.py  svc_clf.py  text2embed.py
models/topic_mod/: gsdmm.py  gsdmm_mgp.py  lda.py  lsi.py
models/word_embed/: fast_txt.py
notebooks/: Dataset Preparation.ipynb  EDA Amazon.ipynb
preprocessing/: __init__.py  text_preprocessing.py
runs/Jun04_23-31-47_DLSM-MacBook-Pro.local/: events.out.tfevents.1622820720.DLSM-MacBook-Pro.local.75304.0
runs/Jun04_23-31-47_DLSM-MacBook-Pro.local/1622820720.713598/: events.out.tfevents.1622820720.DLSM-MacBook-Pro.local.75304.1
sent_clf_lib/fasttext/: ft_embeds.py
sent_clf_lib/huggingface/: hf_clf.py
sent_clf_lib/huggingface/.ipynb_checkpoints/: hf_clf-checkpoint.py
sent_clf_lib/sklearn/: rf_clf.py  svc_clf.py  text2embed.py
tests/: test_analysing_sentiments_and_topics_of_amazon_reviews.py
utils/: __init__.py  datasets.py  hf_clf.py  logging.py
utils/.ipynb_checkpoints/: hf_clf-checkpoint.py
utils/data_augmentation/: review_augmentation.py
utils/embedding_vectoriser/: MeanEmbeddingVectorizer.py  TfidfEmbeddingVectorizer.py  __init__.py
wandb/: latest-run
wandb/run-20210711_212211-14ss0x86/: run-14ss0x86.wandb
wandb/run-20210711_212211-14ss0x86/files/: config.yaml  wandb-metadata.json
wandb/run-20210711_212847-10kta5ls/: run-10kta5ls.wandb
wandb/run-20210711_212847-10kta5ls/files/: config.yaml  requirements.txt  wandb-metadata.json
