[tool.poetry]
name = "Analysing-sentiments-and-topics-of-amazon-reviews"
version = "0.1.0"
description = ""
authors = ["ChristopherLiew <52255272+ChristopherLiew@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.6.1"
pandas = "^1.2.4"
numpy = "<1.20.0"
torch = "^1.8.1"
nlpaug = "^1.1.3"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^4.14.3"
tensorflow = "<2.5.0"
gensim = "<4.0.1"
nltk = "^3.6.2"
spacy = "^3.0.6"
gsdmm = {git = "https://github.com/rwalk/gsdmm.git"}
tqdm = "<4.50.0"
tensorboard = "<2.5"
pytorch-lightning = "^1.3.3"
bertviz = "^1.1.0"
DateTime = "^4.3"
python-Levenshtein = "^0.12.2"
datasets = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
