[tool.poetry]
name = "Analysing-sentiments-and-topics-of-amazon-reviews"
version = "0.1.0"
description = ""
authors = ["ChristopherLiew <52255272+ChristopherLiew@users.noreply.github.com>"]
packages = [
    { include = "preprocessing" },
    { include = "models" },
    { include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
transformers = "^4.6.1"
pandas = "^1.2.4"
numpy = "<1.20.0"
torch = "^1.8.1"
nlpaug = "^1.1.3"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^4.14.3"
tensorflow = "<2.5.0"
gensim = "<4.0.1"
nltk = "^3.6.2"
spacy = ">=3.0.5,<3.1.0"  # Contrain
gsdmm = {git = "https://github.com/rwalk/gsdmm.git"}
tqdm = "<4.50.0"
tensorboard = "<2.5"
pytorch-lightning = "^1.3.3"
bertviz = "^1.1.0"
DateTime = "^4.3"
python-Levenshtein = "^0.12.2"
datasets = "^1.7.0"
typer = {extras = ["all"], version = "^0.3.2"}
jupyterlab = "^3.0.16"
wandb = "^0.10.33"
sentence-transformers = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[tool.poetry.scripts]
# CLI for sentiment classification
auto-sent = 'cli.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
